--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -153,7 +153,7 @@ jobs:
           RESPONSE=$(curl -X POST \
             -H "Content-Type: application/json" \
             -d '{"repository":{"url":"https://github.com/rcommerz/logger-laravel"}}' \
-            "https://packagist.org/api/update-package?username=rcommerz&apiToken=${{ secrets.PACKAGIST_TOKEN }}" \
+            "https://packagist.org/api/update-package?username=islam_maruf&apiToken=${{ secrets.PACKAGIST_TOKEN }}" \
             -s -w "\n%{http_code}")
 
           HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
