--- a/.github/workflows/packagist-update.yml
+++ b/.github/workflows/packagist-update.yml
@@ -32,7 +32,7 @@ jobs:
           echo "Repository: $REPO_URL"
 
       - name: Trigger Packagist Update
-        if: ${{ secrets.PACKAGIST_TOKEN != '' }}
+        if: secrets.PACKAGIST_TOKEN != ''
         run: |
           echo "📦 Triggering Packagist update for ${{ github.event.inputs.package || 'rcommerz/logger-laravel' }}..."
 
@@ -56,7 +56,7 @@ jobs:
           fi
 
       - name: No Token Warning
-        if: ${{ secrets.PACKAGIST_TOKEN == '' }}
+        if: secrets.PACKAGIST_TOKEN == ''
         run: |
           echo "❌ PACKAGIST_TOKEN secret not configured!"
           echo ""
@@ -69,7 +69,7 @@ jobs:
           exit 1
 
       - name: Verify Update
-        if: ${{ secrets.PACKAGIST_TOKEN != '' }}
+        if: secrets.PACKAGIST_TOKEN != ''
         run: |
           echo "⏳ Waiting 10 seconds for Packagist to process..."
           sleep 10
