--- a/.github/workflows/packagist-update.yml
+++ b/.github/workflows/packagist-update.yml
@@ -32,14 +32,16 @@ jobs:
           echo "Repository: $REPO_URL"
 
       - name: Trigger Packagist Update
-        if: secrets.PACKAGIST_TOKEN != ''
+        if: env.PACKAGIST_TOKEN != ''
+        env:
+          PACKAGIST_TOKEN: ${{ secrets.PACKAGIST_TOKEN }}
         run: |
           echo "📦 Triggering Packagist update for ${{ github.event.inputs.package || 'rcommerz/logger-laravel' }}..."
 
           RESPONSE=$(curl -X POST \
             -H "Content-Type: application/json" \
             -d "{\"repository\":{\"url\":\"${{ steps.repo-info.outputs.repo-url }}\"}}" \
-            "https://packagist.org/api/update-package?username=islam_maruf&apiToken=${{ secrets.PACKAGIST_TOKEN }}" \
+            "https://packagist.org/api/update-package?username=islam_maruf&apiToken=$PACKAGIST_TOKEN" \
             -s -w "\n%{http_code}")
 
           HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
@@ -56,7 +58,9 @@ jobs:
           fi
 
       - name: No Token Warning
-        if: secrets.PACKAGIST_TOKEN == ''
+        if: env.PACKAGIST_TOKEN == ''
+        env:
+          PACKAGIST_TOKEN: ${{ secrets.PACKAGIST_TOKEN }}
         run: |
           echo "❌ PACKAGIST_TOKEN secret not configured!"
           echo ""
@@ -69,7 +73,9 @@ jobs:
           exit 1
 
       - name: Verify Update
-        if: secrets.PACKAGIST_TOKEN != ''
+        if: env.PACKAGIST_TOKEN != ''
+        env:
+          PACKAGIST_TOKEN: ${{ secrets.PACKAGIST_TOKEN }}
         run: |
           echo "⏳ Waiting 10 seconds for Packagist to process..."
           sleep 10
