--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
   ],
   "require": {
     "php": "^8.1",
-    "illuminate/support": "^10.0|^11.0",
-    "illuminate/http": "^10.0|^11.0",
+    "illuminate/support": "^9.0|^10.0|^11.0",
+    "illuminate/http": "^9.0|^10.0|^11.0",
     "monolog/monolog": "^3.5",
     "open-telemetry/api": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.0",
-    "orchestra/testbench": "^8.0|^9.0"
+    "phpunit/phpunit": "^9.5|^10.0",
+    "orchestra/testbench": "^7.0|^8.0|^9.0"
   },
   "autoload": {
     "psr-4": {
